[FIX] fix booking process and oauth2 bug